--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@ Almost all of these books have been acquired though people who are willing to sh
 <br><br>
 
 <u><b>AQA</b></u><br>
-<a href = "/biologysvgs/biotextbook">Biology GCSE textbook (higher tier)</a><br>
-<a href = "/chemistrysvgs/chemtextbook">Chemistry GCSE textbook (higher tier)</a><br>
-<a href = "/physicssvgs/phystextbook">Physics GCSE textbook (higher tier)</a><br>
-<a href = "/englangsvgs/englangtextbook">English Language GCSE textbook</a><br><br>
+<a href = "/biologysvgs/biotextbook.html">Biology GCSE textbook (higher tier)</a><br>
+<a href = "/chemistrysvgs/chemtextbook.html">Chemistry GCSE textbook (higher tier)</a><br>
+<a href = "/physicssvgs/phystextbook.html">Physics GCSE textbook (higher tier)</a><br>
+<a href = "/englangsvgs/englangtextbook.html">English Language GCSE textbook</a><br><br>
 
 <u><b>Edexcel</b></u><br>
-<a href = "/englitconpoetrysvgs/englitconpoetrytextbook">English GCSE Power And Conflict Poetry Guide</a><br>
-<a href ="/englitunseenpoetrysvgs/englitunseenpoetrytextbook">English GCSE Unseen Poetry Guide</a><br>
-<a href = "/edexcelphysicsrevionsvgs/edexcelphysicsrevisiontextbook">Physics GCSE revision Guide</a><br>
-<a href = "/edexcelphysicssvgs/edexcelphysicssvgs">Physics GCSE Textbook</a><br>
-<a href = "/edexcelchemistryrevision/edexcelchemistryrevisiontextbook">Chemistry GCSE revision Guide</a><br>
-<a href = "/edexcelchemistry/edexcelchemistrytextbook">Chemistry GCSE Textbook</a><br>
-<a href = "/edexcelbiologyrevisionsvgs/edexcelbiologyrevisiontextbook">Biology GCSE Revision Guide</a><br>
-<a href = "/edexcelbiologytextbooksvgs/edexcelbiologytextbook">Biology GCSE textbook<br>
-<a href = "/mathssvgs/mathstextbook">Maths GCSE textbook (higher tier)</a><br><br>
+<a href = "/englitconpoetrysvgs/englitconpoetrytextbook.html">English GCSE Power And Conflict Poetry Guide</a><br>
+<a href ="/englitunseenpoetrysvgs/englitunseenpoetrytextbook.html">English GCSE Unseen Poetry Guide</a><br>
+<a href = "/edexcelphysicsrevionsvgs/edexcelphysicsrevisiontextbook.html">Physics GCSE revision Guide</a><br>
+<a href = "/edexcelphysicssvgs/edexcelphysicssvgs.html">Physics GCSE Textbook</a><br>
+<a href = "/edexcelchemistryrevision/edexcelchemistryrevisiontextbook.html">Chemistry GCSE revision Guide</a><br>
+<a href = "/edexcelchemistry/edexcelchemistrytextbook.html">Chemistry GCSE Textbook</a><br>
+<a href = "/edexcelbiologyrevisionsvgs/edexcelbiologyrevisiontextbook.html">Biology GCSE Revision Guide</a><br>
+<a href = "/edexcelbiologytextbooksvgs/edexcelbiologytextbook.html">Biology GCSE textbook<br>
+<a href = "/mathssvgs/mathstextbook.html">Maths GCSE textbook (higher tier)</a><br><br>
 
 <u><b>OCR</b></u><br>
-<a href = "/ocrcomputingrevpractsvgs/ocrcomputingrevpract">Computer Science GCSE Complete Revision & Practice</a><br><br>
+<a href = "/ocrcomputingrevpractsvgs/ocrcomputingrevpract.html">Computer Science GCSE Complete Revision & Practice</a><br><br>
 
 
 <u><b>No exam board specified/can be used under any exam board</b></u><br>
-<a href = "/englitxmascarolguide/englitxmascarolguidetextbook">A Christmas Carol GCSE Text guide</a>
+<a href = "/englitxmascarolguide/englitxmascarolguidetextbook.html">A Christmas Carol GCSE Text guide</a>
 
 
 
