--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ Almost all of these books have been acquired though people who are willing to sh
 <a href = "/textbooks-heckyeah/biologysvgs/biotextbook.html">Biology GCSE textbook (higher tier)</a><br>
 <a href = "/textbooks-heckyeah/chemistrysvgs/chemtextbook.html">Chemistry GCSE textbook (higher tier)</a><br>
 <a href = "/textbooks-heckyeah/physicssvgs/phystextbook.html">Physics GCSE textbook (higher tier)</a><br>
-<a href = "/textbooks-heckyeah/englangsvgs/englangtextbook.html">English Language GCSE textbook</a><br><br>
-<a href = "New-A-Level-Physics-for-2018-AQA-Year-1-2-Complete-Revision-Practice-CGP-A-Level-Physics.pdf">Physics A-level</a><br><br>
+<a href = "/textbooks-heckyeah/englangsvgs/englangtextbook.html">English Language GCSE textbook</a><br>
+<a href = "New-A-Level-Physics-for-2018-AQA-Year-1-2-Complete-Revision-Practice-CGP-A-Level-Physics.pdf">Physics A-level (PDF)</a><br><br>
 
 <u><b>Edexcel</b></u><br>
 <a href = "/textbooks-heckyeah/englitconpoetrysvgs/englitconpoetrytextbook.html">English GCSE Power And Conflict Poetry Guide</a><br>
