--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@ Almost all of these books have been acquired though people who are willing to sh
 <a href = "/textbooks-heckyeah/chemistrysvgs/chemtextbook.html">Chemistry GCSE textbook (higher tier)</a><br>
 <a href = "/textbooks-heckyeah/physicssvgs/phystextbook.html">Physics GCSE textbook (higher tier)</a><br>
 <a href = "/textbooks-heckyeah/englangsvgs/englangtextbook.html">English Language GCSE textbook</a><br>
-<a href = "New-A-Level-Physics-for-2018-AQA-Year-1-2-Complete-Revision-Practice-CGP-A-Level-Physics.pdf">Physics A-level (PDF)</a><br><br>
+<a href = "New-A-Level-Physics-for-2018-AQA-Year-1-2-Complete-Revision-Practice-CGP-A-Level-Physics.pdf">Physics A-level (PDF)</a><br>
+<a href = "aqacombinedsci.pdf">Combined Science GCSE Foundation Revision Guide</a><br>
+<a href = "aqacompsci.pdf">Computer Science GCSE Revision Guide</a><br>
+<a href = "aqaenglang.pdf">English Language GCSE Revision & Practice</a><br>
+<a href = "aqaenglit.pdf">English Literature GCSE Revision & Practice</a><br>
+<a href = "aqamathsfoundation.pdf">Maths GCSE Foundation Revision Guide</a><br>
+<a href = "aqamathshigher.pdf">Maths GCSE Higher Revision Guide</a><br>
+<a href = "aqaphysics.pdf">Physics GCSE Higher Revision</a><br>
+<br>
+
 
 <u><b>Edexcel</b></u><br>
 <a href = "/textbooks-heckyeah/englitconpoetrysvgs/englitconpoetrytextbook.html">English GCSE Power And Conflict Poetry Guide</a><br>
