--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ Almost all of these books have been acquired though people who are willing to sh
 <a href = "/textbooks-heckyeah/englangsvgs/englangtextbook.html">English Language GCSE textbook</a><br>
 <a href = "New-A-Level-Physics-for-2018-AQA-Year-1-2-Complete-Revision-Practice-CGP-A-Level-Physics.pdf">Physics A-level (PDF)</a><br>
 <a href = "aqacombinedsci.pdf">Combined Science GCSE Foundation Revision Guide</a><br>
-<a href = "aqacompsci.pdf">Computer Science GCSE Revision Guide</a><br>
-<a href = "aqaenglang.pdf">English Language GCSE Revision & Practice</a><br>
-<a href = "aqaenglit.pdf">English Literature GCSE Revision & Practice</a><br>
-<a href = "aqamathsfoundation.pdf">Maths GCSE Foundation Revision Guide</a><br>
-<a href = "aqamathshigher.pdf">Maths GCSE Higher Revision Guide</a><br>
+<a href = "aqacompsci.pdf">Computer Science GCSE Revision Guide (PDF)</a><br>
+<a href = "aqaenglang.pdf">English Language GCSE Revision & Practice (PDF)</a><br>
+<a href = "aqaenglit.pdf">English Literature GCSE Revision & Practice (PDF)</a><br>
+<a href = "aqamathsfoundation.pdf">Maths GCSE Foundation Revision Guide (PDF)</a><br>
+<a href = "aqamathshigher.pdf">Maths GCSE Higher Revision Guide (PDF)</a><br>
 <a href = "aqaphysics.pdf">Physics GCSE Higher Revision</a><br>
 <br>
 
