--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Note: Due to me not expecting anyone to actually care about this site, only the 
 <br>
 Almost all of these books have been acquired though people who are willing to share their CGP codes, or have sent their book files to me. If you have a book that's not on this list, don't hesitate to get in contact and I'll walk you through how to get the files to me! <u>Opien3459@gmail.com</u>  If you have any questions, issues or bugs, also get in contact. If I don't reply within three weeks, shoot me another email, I've probably missed your message.
 <br><br>
-
+<b>if CGP asks, we will take this site down.</b><br><br>
 <u><b>AQA</b></u><br>
 <a href = "/textbooks-heckyeah/biologysvgs/biotextbook.html">Biology GCSE textbook (higher tier)</a><br>
 <a href = "/textbooks-heckyeah/chemistrysvgs/chemtextbook.html">Chemistry GCSE textbook (higher tier)</a><br>
