--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Almost all of these books have been acquired though people who are willing to sh
 <a href = "aqaenglit.pdf">English Literature GCSE Revision & Practice (PDF)</a><br>
 <a href = "aqamathsfoundation.pdf">Maths GCSE Foundation Revision Guide (PDF)</a><br>
 <a href = "aqamathshigher.pdf">Maths GCSE Higher Revision Guide (PDF)</a><br>
-<a href = "aqaphysics.pdf">Physics GCSE Higher Revision (PDF)</a><br>
+<a href = "CAR45DF.pdf">Chemistry AQA GCSE 9-1 Revision Guide</a><br>
 <br>
 
 
