--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ Almost all of these books have been acquired though people who are willing to sh
 <a href = "/textbooks-heckyeah/englangsvgs/englangtextbook.html">English Language GCSE textbook</a><br>
 <a href = "New-A-Level-Physics-for-2018-AQA-Year-1-2-Complete-Revision-Practice-CGP-A-Level-Physics.pdf">Physics A-level (PDF)</a><br>
 <a href = "aqacombinedsci.pdf">Combined Science GCSE Foundation Revision Guide</a><br>
-<a href = "aqacombinedsciencehigher1.pdf">Combined Science GCSE Higher Revision Guide P1</a>
-<a href = "aqacombinedsciencehigher2.pdf">Combined Science GCSE Higher Revision Guide P2</a>
+<a href = "aqacombinedsciencehigher1.pdf">Combined Science GCSE Higher Revision Guide P1 &nbsp &nbsp </a>
+<a href = "aqacombinedsciencehigher2.pdf">Combined Science GCSE Higher Revision Guide P2</a><br>
 <a href = "aqacompsci.pdf">Computer Science GCSE Revision Guide (PDF)</a><br>
 <a href = "aqaenglang.pdf">English Language GCSE Revision & Practice (PDF)</a><br>
 <a href = "aqaenglit.pdf">English Literature GCSE Revision & Practice (PDF)</a><br>
