Enhance note on book quality and contact details
Added additional context about PDF quality and contact information.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 This page has all the GCP textbooks I can get ahold of. So, if you wanted them for free, here you go!<br>
-Note: Due to me not expecting anyone to actually care about this site, only the AQA books have the png backgrounds.<br>
+Note: Due to me not expecting anyone to actually care about this site, only the AQA books have the png backgrounds. Some of the PDFs are low quality if I can't find them in any better quality sorry<br>
 <br>
 Almost all of these books have been acquired though people who are willing to share their CGP codes, or have sent their book files to me. If you have a book that's not on this list, don't hesitate to get in contact and I'll walk you through how to get the files to me! <u>Opien3459@gmail.com</u>  If you have any questions, issues or bugs, also get in contact. If I don't reply within three weeks, shoot me another email, I've probably missed your message.
 <br><br>
