Update message for uploaded content

--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@ Almost all of these books have been acquired though people who are willing to sh
 
 
 <br><br><br><br>
-<u><b>Yet to be uploaded (but I have)</b></u><br>
+<u><b>Yet to be uploaded (but I have)(email me if you need them rn)</b></u><br>
 Macbeth text guide<br>
 Edexcel english lang revision guide<br>
