--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+ <head>
+  <meta charset="UTF-8">
+  <meta name="description" content="Free GCSE textbooks PDF ">
+  <meta name="keywords" content="Textbooks, CGP, GCSE, STEM, UK, PDF, SVG">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head> 
+
 This page has all the GCP textbooks I can get ahold of. So, if you wanted them for free, here you go!<br>
 Note: Due to me not expecting anyone to actually care about this site, only the AQA books have the png backgrounds. Some of the PDFs are low quality if I can't find them in any better quality sorry<br>
 <br>
