Update PDF links for GCSE textbooks

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ Almost all of these books have been acquired though people who are willing to sh
 <b>if CGP asks, we will take this site down.</b><br><br>
 <u><b>AQA</b></u><br>
 <a href = "/textbooks-heckyeah/biologysvgs/biotextbook.html">Biology GCSE textbook (higher tier)</a><br>
-<a href = "/textbooks-heckyeah/biologysvgs/aqabio.html">Biology GCSE textbook (higher tier) (PDF)</a><br>
+<a href = "/textbooks-heckyeah/biologysvgs/aqabio.pdf">Biology GCSE textbook (higher tier) (PDF)</a><br>
 <a href = "/textbooks-heckyeah/chemistrysvgs/chemtextbook.html">Chemistry GCSE textbook (higher tier)</a><br>
-<a href = "/textbooks-heckyeah/chemistrysvgs/aqachem.html">Chemistry GCSE textbook (higher tier) (PDF)</a><br>
+<a href = "/textbooks-heckyeah/chemistrysvgs/aqachem.pdf">Chemistry GCSE textbook (higher tier) (PDF)</a><br>
 <a href = "/textbooks-heckyeah/physicssvgs/phystextbook.html">Physics GCSE textbook (higher tier)</a><br>
-<a href = "/textbooks-heckyeah/physicssvgs/aqaphys.html">Physics GCSE textbook (higher tier) (PDF)</a><br>
+<a href = "/textbooks-heckyeah/physicssvgs/aqaphys.pdf">Physics GCSE textbook (higher tier) (PDF)</a><br>
 <a href = "/textbooks-heckyeah/englangsvgs/englangtextbook.html">English Language GCSE textbook</a><br>
-<a href = "/textbooks-heckyeah/englangsvgs/aqaenglang.html">English Language GCSE textbook (PDF)</a><br>
+<a href = "/textbooks-heckyeah/englangsvgs/aqaenglang.pdf">English Language GCSE textbook (PDF)</a><br>
 <a href = "New-A-Level-Physics-for-2018-AQA-Year-1-2-Complete-Revision-Practice-CGP-A-Level-Physics.pdf">Physics A-level (PDF)</a><br>
 <a href = "aqacombinedsci.pdf">Combined Science GCSE Foundation Revision Guide</a><br>
 <a href = "aqacombinedsciencehigher1.pdf">Combined Science GCSE Higher Revision Guide P1 &nbsp &nbsp </a>
