--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@ Almost all of these books have been acquired though people who are willing to sh
 
 <u><b>No exam board specified/can be used under any exam board</b></u><br>
 <a href = "/textbooks-heckyeah/englitxmascarolguide/englitxmascarolguidetextbook.html">A Christmas Carol GCSE Text guide</a>
+  <a href = "/textbooks-heckyeah/englitxmascarolguide/englitmacbethguidetextbook.html">Macbeth GCSE Text guide</a>
 
 
 
 
 <br><br><br><br>
 <u><b>Yet to be uploaded (but I have)(email me if you need them rn)</b></u><br>
-Macbeth text guide<br>
 Edexcel english lang revision guide<br>
